[metadata]
name = FuncDecompTree
version = attr: FuncDecompTree.__version__
license = Apache License 2.0
description = Functional Decomposition Diagram Helper
author = Hiori Kino
url = https://github.com/nim-hrkn/FunctionalDecompositionTreeHelper

[options]
install_requires = 
  graphviz
zip_safe = False
packages = FuncDecompTree
