[metadata]
name = FuncDecompHelper
version = attr: FuncDecompHelper.__version__
license = Apache License 2.0
description = Function Decomposition Network Helper
author = Hiori Kino
url = https://github.com/nim-hrkn/FunctionDecompositionNetworkHelper

[options]
install_requires = 
  graphviz
zip_safe = False
packages = FuncDecompHelper
